<resources>
    <string name="app_name">DSMG Admin</string>
    <string name="enter_admin_key">Enter Admin Key</string>
    <string name="enter">Enter</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_code">Product Code</string>
    <string name="product_description">Product Description</string>
    <string name="category">Category</string>
    <string name="authentication_code">Authentication Code</string>
    <string name="product_price">Product Price</string>
    <string name="cutted_price">Cutted Price</string>
    <string name="quantity">Quantity</string>
    <string name="product_information">Product Information</string>
    <string name="update_details">Update Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="received_message">Received message</string>
    <string name="sent_message">Sent message</string>
    <string name="type_message_here">Type message here</string>
    <string name="status">Status:</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="delivered">Delivered</string>
    <string name="full_name">Full Name:</string>
    <string name="full_name_">Full Name</string>
    <string name="address">Address:</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="xxxxxxxxxx">xxxxxxxxxx</string>
    <string name="value">Value:</string>
    <string name="price">Price</string>
    <string name="items_ordered">Items Ordered</string>
    <string name="product_id">Product ID</string>
</resources>