<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Activity.ManageProductActivity">

    <TextView
        android:id="@+id/txtProductInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/product_information"/>

    <ImageView
        android:id="@+id/manageProductImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/txtProductInfo"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:src="@drawable/image_preview" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manageProductImage">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/manageProductName"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:background="@drawable/input_fields"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/product_name"
                android:padding="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:id="@+id/manageProductCode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/manageProductName"
                android:background="@drawable/input_fields"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/product_code"
                android:padding="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <RelativeLayout
                android:id="@+id/manageProductCategoryLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_below="@+id/manageProductCode"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/category"
                    android:padding="2dp"
                    android:textSize="20sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"/>

                <TextView
                    android:id="@+id/manageProductCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/category"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_alignParentEnd="true"
                    android:padding="2dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"/>
            </RelativeLayout>

            <EditText
                android:id="@+id/manageProductDescription"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/input_fields"
                android:hint="@string/product_description"
                android:padding="2dp"
                android:layout_below="@+id/manageProductCategoryLayout"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:scrollbars="vertical|horizontal"
                android:scrollbarSize="5dp"
                android:verticalScrollbarPosition="right"
                android:scrollHorizontally="true"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/manageProductDescription">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp">
                    <EditText
                        android:id="@+id/manageProductPrice"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_input_fields"
                        android:hint="@string/product_price"
                        android:textSize="18sp"
                        android:padding="5dp"
                        android:layout_marginBottom="5dp"/>

                    <EditText
                        android:id="@+id/manageProductCuttedPrice"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_input_fields"
                        android:hint="@string/cutted_price"
                        android:padding="5dp"
                        android:textSize="18sp"
                        android:layout_marginBottom="20dp"/>
                </LinearLayout>

                <Button
                    android:id="@+id/updateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttons"
                    android:text="Update "
                    android:padding="15dp"
                    android:textAllCaps="false"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>