<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Activity.AddProductActivity">

    <TextView
        android:id="@+id/txtAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/add_product"/>

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/txtAddProduct"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:src="@drawable/image_preview" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/chooseImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgPreview"
        android:layout_marginStart="-25dp"
        android:layout_marginBottom="-20dp"
        android:layout_toEndOf="@+id/imgPreview"
        android:src="@drawable/icon_add" />

    <ProgressBar
        android:id="@+id/uploadProgress"
        android:layout_marginTop="10dp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_below="@id/imgPreview" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uploadProgress">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/uploadProductName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input_fields"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/product_name"
                android:padding="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:id="@+id/uploadProductCode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/uploadProductName"
                android:background="@drawable/input_fields"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/product_code"
                android:padding="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <LinearLayout
                android:id="@+id/uploadProductCategorySpinner"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_below="@+id/uploadProductCode"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtProductCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/category"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_weight=".28"
                    android:background="@drawable/spinners"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/uploadProductCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:autofillHints="Tap to select"
                        android:layout_marginStart="5dp"
                        android:spinnerMode="dropdown" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_drop" />

                </RelativeLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/uploadProductDescription"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/input_fields"
                android:hint="@string/product_description"
                android:padding="2dp"
                android:layout_below="@+id/uploadProductCategorySpinner"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:scrollbars="vertical|horizontal"
                android:scrollbarSize="5dp"
                android:verticalScrollbarPosition="right"
                android:scrollHorizontally="true"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/uploadProductDescription">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:id="@+id/uploadProductPrice"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_input_fields"
                        android:hint="@string/product_price"
                        android:textSize="18sp"
                        android:padding="5dp"
                        android:layout_marginBottom="5dp"/>

                    <EditText
                        android:id="@+id/uploadProductQuantity"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_input_fields"
                        android:hint="Cutted Price"
                        android:padding="5dp"
                        android:textSize="18sp"
                        android:layout_marginBottom="20dp"/>
                </LinearLayout>

                <Button
                    android:id="@+id/uploadButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttons"
                    android:text="@string/add_product"
                    android:padding="15dp"
                    android:layout_marginTop="5dp"
                    android:textAllCaps="false"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:layout_below="@+id/uploadProductDescription"/>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>



</RelativeLayout>